sass/_editbar.scss
@import "flexbox", "variables";

.editbar {
  position: relative;
  z-index: 1;

  @include display-flex;
  @include align-items(flex-start);
  @include align-items(center);
  @include justify-content(flex-end);

  padding: 8px 6px 0 0;
  right: 0;

  > li {
    padding: 0 20px 0 0;
  }

  a, label {
    color: $grey-color;
    transition: color .4s;
  }

  a:hover, label:hover {
    color: $freifunk-yellow;
  }
}

.editbar, .actionsMenu {
  list-style: none;
}

#actionsMenuDropDown {
  display: none;

  + label {
    cursor: pointer;
    transition: color .4s;
  }
}

.actionsMenuWrap {
  position: absolute;
  overflow-y: hidden;
  max-height: 0;

  margin-left: -19px;
  margin-top: 10px;
  box-shadow: $outer-shadow;
  transition: max-height .4s;
}

.actionsMenu {
  padding: 10px 0;
  background: white;
  white-space: nowrap;

  > li {
    margin: 6px 20px;
  }
}

#actionsMenuDropDown:checked ~ .actionsMenuWrap {
  max-height: 480px;
}

.disabled a {
  color: $grey-color-light !important;
  pointer-events: none;
}

